# SFML_Template

./: .gitattributes  CMakeLists.txt
src/: main.cpp
